add ref to maven area

--- a/astrogrid/applications/src/webapp/index.html
+++ b/astrogrid/applications/src/webapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<!-- $Id: index.html,v 1.6 2004/02/02 16:49:44 pah Exp $ --><!-- this is a bit of a hack - it should be generated during the site build so
+<!-- $Id: index.html,v 1.7 2004/03/29 12:35:29 pah Exp $ --><!-- this is a bit of a hack - it should be generated during the site build so
 that the styles are correct -->
   <title>AstroGrid Project - AstroGrid Applications Integration</title>
   <style type="text/css">
@@ -86,7 +86,7 @@ before trying to invoke the service. <br/>
         <li>You can then check your <a href="check_config.jsp">configuration</a></li>
         <li>There is a test application in the <a href="test">test
 folder</a> that can be quickly configured
-to allow the installation to be&nbsp;<a href="Troubleshooting.html">tested</a></li>
+to allow the installation to be&nbsp;<a href="maven/Troubleshooting.html">tested</a></li>
       </ul>
       <h5>Application Configuration</h5>
       <p>It does take some work work to <a
@@ -99,6 +99,9 @@ documentation</a> for this ApplicationController service. </p>
 <h4>Using the Service</h4>
 <p>It is possible to call the service directly, with a knowledge of the <a href="/astrogrid-applications/services/ApplicationControllerService?wsdl">wsdl</a>, but if you are programming in java, then you might find it easier to use the delegate contained in the <a href="ApplicationControllerDelegate.jar">this jar</a>. 
 	The main calling interface is described by the <a href="/astrogrid-applications/maven/apidocs/org/astrogrid/applications/manager/ApplicationController.html">ApplicationController</a> </p>
+	
+<h4>Getting the Latest Version</h4>
+<p>You can find the latest version of this web application from <a href="http://www.astrogrid.org/maven/docs/snapshot/applications/index.html">http://www.astrogrid.org/maven/docs/snapshot/applications/index.html</a></p>	
       </div>
       </div>
       </div>
